--- a/login.html
+++ b/login.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
+
+    <!-- Error Login Pop Up -->
+    <div id="errorLogin" class="error">
+        <div class="error-content">
+            <span class="close">&times;</span>
+            <p>Username or password is incorrect!</p>
+        </div>
+    </div>
+    
     <!-- Carousel Background -->
     <div class="carousel">
         <div class="carousel-inner">
