--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <h3>Contact</h3>
         <p>+62 815 7527 9212</p>
         <p>booking@evolix.com</p>
-        <p>Jalan Pasuruan, RT 09, RW 04, Jatilawang, Banyumas, Jawa Tengah, 53174</p>
+        <p>Perumahan Bukit Kalibagor Indah, Blok D2 No. 11, Kalibagor, Indonesia, 53191</p>
       </div>
       <div class="social">
         <h3>Social</h3>
