--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evolix Login</title>
-    <link rel="icon" href="assets/Evolix Logo.png" type="image/x-icon">
+    <link rel="icon" href="assets/Logo Usaha (4).png" type="image/x-icon">
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
@@ -33,7 +33,7 @@
     <div class="login-container">
         <div class="login-box">
             <h1>Welcome!</h1>
-            <img src="assets/Evolix Logo.png" alt="Logo">
+            <img src="assets/Logo Usaha (4).png" alt="Logo">
             <form id="loginForm">
                 <input type="text" id="username" name="username" placeholder="Username" required>
                 <input type="password" id="password" name="password" placeholder="Password" required>
