--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <nav class="navbar" id ="navbar">
     <div class="logo">
         <a href="#home" onclick="location.reload();">
-            <img src="assets/Evolix Logo.png" alt="Logo">
+            <img src="assets/Logo Usaha (4).png" alt="Logo">
         </a>
     </div>
     <button class="navbar-toggler">
@@ -62,7 +62,7 @@
           <h1>ABOUT EVOLIX</h1>
         </div>
         <div class="about-text">
-          <img src="assets/Evolix Logo.png" alt="Logo">
+          <img src="assets/Logo Usaha (4).png" alt="Logo">
             <p>
               Evolix is an innovative fashion brand committed to empowering individuals through bold designs that blend contemporary 
               trends with timeless elegance. We create clothing that not only follows fashion but also expresses personality and the 
@@ -194,7 +194,7 @@
 <section id="contact">
     <div class="footer-container">
       <div class="footer-logo">
-        <img src="assets/Evolix Logo.png" alt="Logo">
+        <img src="assets/Logo Usaha (4).png" alt="Logo">
       </div>
       <div class="contact-info">
         <h3>Contact</h3>
