--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evolix, Welcome!</title>
+    <link rel="icon" href="assets/Logo Usaha (4).png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
